@@ -8,7 +8,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>,
            Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10.3),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools (>= 0.15.26~),
                qml-module-qtgraphicaleffects (>= 5.9.2~),
